Fixed: Footer menu scaling on tablets

--- a/resources/assets/styles/_mobile.scss
+++ b/resources/assets/styles/_mobile.scss
@@ -395,3 +395,9 @@
   max-width: 100%;
   height: auto;
 }
+
+@media (max-width: 992px) and (min-width: 768px) {
+  .footer-right-side {
+    width: 40%;
+  }
+}
